--- a/index.html
+++ b/index.html
@@ -64,8 +64,11 @@
   </script>
 </head>
 <body>
-<div id="auth-ui">
-  <button id="btn-login" class="btn btn-secondary">Log in / Sign up</button>
+<!-- Authentication UI -->
+<div id="auth-ui" class="container mt-4">
+  <div class="d-flex justify-content-center w-100">
+    <button id="btn-login" class="btn btn-primary">Log in / Sign up</button>
+  </div>
 </div>
 <div id="tracker-ui" style="display:none;">
   <div class="container mt-5">
