--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
   </script>
 </head>
 <body>
+<div id="user-info" class="position-absolute top-0 end-0 m-3 text-end"></div>
 <!-- Authentication UI -->
 <div id="auth-ui" class="container mt-4">
   <div class="d-flex justify-content-center w-100">
@@ -155,6 +156,18 @@
     import { getAnalytics } from 'https://www.gstatic.com/firebasejs/11.6.0/firebase-analytics.js';
     import { getAuth, onAuthStateChanged, signInWithPopup, GoogleAuthProvider } from 'https://www.gstatic.com/firebasejs/11.6.0/firebase-auth.js';
     import { getFirestore, collection, query, where, orderBy, getDocs, addDoc, onSnapshot } from 'https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore.js';
+    // Helper to render one score row
+    function appendHistoryEntry(entry) {
+      const tr = document.createElement('tr');
+      tr.innerHTML = `
+        <td>${entry.date}</td>
+        <td>${entry.section}</td>
+        <td>${entry.timing}</td>
+        <td>${entry.time}</td>
+        <td>${entry.score}</td>
+      `;
+      document.getElementById('historyBody').appendChild(tr);
+    }
  
     // Firebase config
     const firebaseConfig = {
@@ -206,13 +219,16 @@
       signInWithPopup(auth, new GoogleAuthProvider());
     });
     onAuthStateChanged(auth, user => {
+      const userInfo = document.getElementById('user-info');
       if (user) {
         authUI.style.display = 'none';
         trackerUI.style.display = 'block';
+        userInfo.textContent = `👤 ${user.email}`;
         loadScores();
       } else {
         authUI.style.display = 'flex';
         trackerUI.style.display = 'none';
+        userInfo.textContent = '';
       }
     });
  
