--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
     loginBtn.addEventListener('click', () => signInWithPopup(auth, new GoogleAuthProvider()));
     onAuthStateChanged(auth, user => {
       const userInfo = document.getElementById('user-info');
+      console.log('[Auth] user:', user ? user.uid : null);
       if (user) {
         authUI.style.display    = 'none';
         trackerUI.style.display = 'block';
@@ -249,6 +250,7 @@
       const q = query(scoresRef, where('userId', '==', user.uid));
       // Subscribe to real-time updates
       onSnapshot(q, snapshot => {
+        console.log('[Firestore] snapshot docs count:', snapshot.docs.length);
         allEntries = snapshot.docs
           .map(docSnap => ({ id: docSnap.id, data: docSnap.data() }))
           .sort((a, b) => new Date(b.data.createdAt.toDate()) - new Date(a.data.createdAt.toDate()));
@@ -266,6 +268,9 @@
       const tbody = document.getElementById('historyBody');
       const sectionFilter = document.getElementById('filterSection').value;
       const timingFilter  = document.getElementById('filterTiming').value;
+      console.log('[Render] allEntries length:', allEntries.length,
+                  'sectionFilter:', sectionFilter,
+                  'timingFilter:', timingFilter);
       tbody.innerHTML = '';
       const filtered = allEntries.filter(({ data }) => {
         return (sectionFilter === 'All' || data.section === sectionFilter)
