--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>UCAT Scores Tracker</title>
+  <title>UCAT Tracker</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script>
@@ -72,7 +72,7 @@
   </div>
 </div>
 <div id="tracker-ui" style="display:none;">
-  <div class="container mt-5">
+  <div class="container-fluid mt-5">
     <h1 class="mb-4">UCAT Tracker</h1>
     
     <!-- Card for entering a new score -->
@@ -110,11 +110,16 @@
             </div>
             <!-- Score -->
             <div class="col-auto">
-              <label for="score" class="col-form-label">Score</label>
+              <label for="score" class="col-form-label">Score (x/y)</label>
               <div class="d-flex align-items-center">
                 <input type="text" class="form-control" id="score" name="score" required style="width:150px;">
                 <span id="scorePercentage" class="ms-2"></span>
               </div>
+            </div>
+            <!-- Review Notes -->
+            <div class="col-auto">
+              <label for="review" class="col-form-label">Review</label>
+              <textarea class="form-control" id="review" name="review" rows="1" style="width:200px;" placeholder="Mistakes, why..."></textarea>
             </div>
             <!-- Submit -->
             <div class="col-auto">
@@ -131,7 +136,7 @@
       <div class="card-body">
         <div class="d-flex mb-3">
           <div class="me-3">
-            <label for="filterSection" class="form-label">Filter Section:</label>
+            <label for="filterSection" class="form-label">Filter by Section:</label>
             <select id="filterSection" class="form-select">
               <option value="All">All</option>
               <option value="VR">Verbal Reasoning</option>
@@ -140,7 +145,7 @@
             </select>
           </div>
           <div>
-            <label for="filterTiming" class="form-label">Filter Timing:</label>
+            <label for="filterTiming" class="form-label">Filter by Timing:</label>
             <select id="filterTiming" class="form-select">
               <option value="All">All</option>
               <option value="Timed">Timed</option>
@@ -157,12 +162,13 @@
                 <th>Timing</th>
                 <th>Time</th>
                 <th>Score</th>
+                <th>Review</th>
                 <th>Actions</th>
               </tr>
             </thead>
             <tbody id="historyBody">
               <tr id="noScoresRow">
-                <td colspan="6" class="text-center">No scores yet.</td>
+                <td colspan="7" class="text-center">No scores yet.</td>
               </tr>
             </tbody>
           </table>
@@ -194,6 +200,7 @@
     <td>${entry.timing}</td>
     <td>${entry.time}</td>
     <td>${entry.score}</td>
+    <td>${entry.review || ''}</td>
     <td>
       <button class="btn btn-sm btn-outline-danger" onclick="deleteScore('${id}')">🗑️</button>
     </td>
@@ -280,7 +287,7 @@
             && (timingFilter  === 'All' || data.timing  === timingFilter);
       });
       if (filtered.length === 0) {
-        tbody.innerHTML = `<tr id="noScoresRow"><td colspan="6" class="text-center">No scores found.</td></tr>`;
+        tbody.innerHTML = `<tr id="noScoresRow"><td colspan="7" class="text-center">No scores found.</td></tr>`;
       } else {
         filtered.forEach(({ data, id }) => appendHistoryEntry(data, id));
       }
@@ -289,6 +296,7 @@
     async function addScore(entry) {
       entry.userId = auth.currentUser.uid;
       entry.createdAt = serverTimestamp();
+      entry.review = document.getElementById('review').value;
       try {
         const docRef = await addDoc(collection(db, 'scores'), entry);
         console.log('[Firestore] addDoc succeeded, ID:', docRef.id, entry);
