--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div id="tracker-ui" style="display:none;">
   <div class="container-fluid mt-5">
     <h1 class="mb-4">UCAT Tracker</h1>
-    
+    <div class="mx-auto" style="max-width:800px; border:1px solid #ccc; padding:1rem;">
     <!-- Card for entering a new score -->
     <div class="card mb-4">
       <div class="card-header">Enter New Score</div>
@@ -333,6 +333,7 @@
       e.target.reset(); setTiming('Timed'); updateScorePercentage();
     });
   </script>
+</div>
 </div>
 </body>
 </html>
