--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </div>
 <div id="tracker-ui" style="display:none;">
   <div class="container-fluid mt-5">
-    <h1 class="mb-4">UCAT Tracker</h1>
+    <h1 class="mb-4 ms-4">UCAT Tracker</h1>
     <div class="mx-auto" style="max-width:2000px; border:1px solid #ccc; padding:1rem;">
     <!-- Card for entering a new score -->
     <div class="card mb-4">
