Review box longer

--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
               </div>
             </div>
             <!-- Review Notes -->
-            <div class="col-auto">
+            <div class="col-md-4">
               <label for="review" class="col-form-label">Review</label>
-              <textarea class="form-control" id="review" name="review" rows="1" style="width:200px;" placeholder="Mistakes, why..."></textarea>
+              <textarea class="form-control" id="review" name="review" rows="1" style="width:100%;" placeholder="Mistakes, why..."></textarea>
             </div>
             <!-- Submit -->
             <div class="col-auto">
