--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <!-- Review Notes -->
             <div class="col-md-4">
               <label for="review" class="col-form-label">Review</label>
-              <textarea class="form-control" id="review" name="review" rows="1" style="width:100%;" placeholder="Mistakes, why..."></textarea>
+              <textarea class="form-control" id="review" name="review" rows="1" style="width:100%;" placeholder="Why did you make those mistakes, etc..."></textarea>
             </div>
             <!-- Submit -->
             <div class="col-auto">
@@ -189,15 +189,15 @@
     function appendHistoryEntry(entry, id) {
       const tr = document.createElement('tr');
       tr.innerHTML = `
-        <td class="text-nowrap">
+        <td class="text-nowrap px-2 py-1">
           ${entry.date} | ${entry.createdAt?.toDate?.() ? entry.createdAt.toDate().toLocaleTimeString() : ''}
         </td>
-        <td class="text-center">${entry.section}</td>
+        <td>${entry.section}</td>
         <td>${entry.timing}</td>
         <td>${entry.time}</td>
         <td>${entry.score}</td>
         <td>${entry.review || ''}</td>
-        <td class="text-center">
+        <td>
           <button class="btn btn-sm btn-outline-danger" onclick="deleteScore('${id}')">🗑️</button>
         </td>
       `;
