--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>UCAT Tracker</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
     // Function to toggle the display of the time input based on the hidden timing value
     function toggleTimeField() {
@@ -175,6 +176,15 @@
         </div>
       </div>
     </div>
+
+    <!-- Score Trend Chart -->
+    <div class="card mt-4">
+      <div class="card-header">Score Trend</div>
+      <div class="card-body">
+        <canvas id="scoreChart" height="100"></canvas>
+      </div>
+    </div>
+
   </div>
   </div>
   <script type="module">
@@ -184,6 +194,7 @@
     import { getFirestore, collection, query, where, onSnapshot, addDoc, deleteDoc, doc, serverTimestamp } from 'https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore.js';
 
     let allEntries = [];
+    let scoreChart;
 
     // Helper to render one score row
     function appendHistoryEntry(entry, id) {
@@ -286,6 +297,47 @@
         tbody.innerHTML = `<tr id="noScoresRow"><td colspan="6" class="text-center">No scores found.</td></tr>`;
       } else {
         filtered.forEach(({ data, id }) => appendHistoryEntry(data, id));
+      }
+      updateChart(filtered);
+    }
+
+    function updateChart(filteredEntries) {
+      const labels = filteredEntries.map(e => e.data.date);
+      const dataVals = filteredEntries.map(e => {
+        const [obt, tot] = e.data.score.split('/').map(Number);
+        return tot > 0 ? (obt / tot) * 100 : 0;
+      });
+      const ctx = document.getElementById('scoreChart').getContext('2d');
+      if (!scoreChart) {
+        scoreChart = new Chart(ctx, {
+          type: 'line',
+          data: {
+            labels,
+            datasets: [{
+              label: '% Correct',
+              data: dataVals,
+              fill: false,
+              tension: 0.1,
+              pointRadius: 5,
+              pointHoverRadius: 7
+            }]
+          },
+          options: {
+            onClick: (evt, elements) => {
+              if (elements.length) {
+                const idx = elements[0].index;
+                alert('Score: ' + filteredEntries[idx].data.score);
+              }
+            },
+            scales: {
+              y: { beginAtZero: true, max: 100 }
+            }
+          }
+        });
+      } else {
+        scoreChart.data.labels = labels;
+        scoreChart.data.datasets[0].data = dataVals;
+        scoreChart.update();
       }
     }
  
