--- a/index.html
+++ b/index.html
@@ -177,13 +177,44 @@
       </div>
     </div>
 
-    <!-- Score Trend Chart -->
-    <div class="card mt-4">
-      <div class="card-header">Score Trend</div>
-      <div class="card-body">
-        <canvas id="scoreChart" height="100"></canvas>
+    <!-- Section Trend Charts -->
+<div class="card mt-4">
+  <div class="card-header">Section Trends</div>
+  <div class="card-body">
+    <div class="row">
+      <!-- VR chart -->
+      <div class="col-md-4 text-center">
+        <h5>VR</h5>
+        <select id="filterVRTiming" class="form-select form-select-sm mb-2">
+          <option value="All">All</option>
+          <option value="Timed">Timed</option>
+          <option value="Untimed">Untimed</option>
+        </select>
+        <canvas id="chartVR" height="150"></canvas>
+      </div>
+      <!-- DM chart -->
+      <div class="col-md-4 text-center">
+        <h5>DM</h5>
+        <select id="filterDMTiming" class="form-select form-select-sm mb-2">
+          <option value="All">All</option>
+          <option value="Timed">Timed</option>
+          <option value="Untimed">Untimed</option>
+        </select>
+        <canvas id="chartDM" height="150"></canvas>
+      </div>
+      <!-- QR chart -->
+      <div class="col-md-4 text-center">
+        <h5>QR</h5>
+        <select id="filterQRTiming" class="form-select form-select-sm mb-2">
+          <option value="All">All</option>
+          <option value="Timed">Timed</option>
+          <option value="Untimed">Untimed</option>
+        </select>
+        <canvas id="chartQR" height="150"></canvas>
       </div>
     </div>
+  </div>
+</div>
 
   </div>
   </div>
@@ -193,6 +224,7 @@
     import { getAuth, onAuthStateChanged, signInWithPopup, GoogleAuthProvider } from 'https://www.gstatic.com/firebasejs/11.6.0/firebase-auth.js';
     import { getFirestore, collection, query, where, onSnapshot, addDoc, deleteDoc, doc, serverTimestamp } from 'https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore.js';
 
+    let chartVR, chartDM, chartQR;
     let allEntries = [];
     let scoreChart;
 
@@ -283,6 +315,9 @@
     // Attach filter event listeners once
     document.getElementById('filterSection').addEventListener('change', renderTable);
     document.getElementById('filterTiming').addEventListener('change', renderTable);
+    document.getElementById('filterVRTiming').addEventListener('change', renderTable);
+    document.getElementById('filterDMTiming').addEventListener('change', renderTable);
+    document.getElementById('filterQRTiming').addEventListener('change', renderTable);
 
     function renderTable() {
       const tbody = document.getElementById('historyBody');
@@ -298,49 +333,46 @@
       } else {
         filtered.forEach(({ data, id }) => appendHistoryEntry(data, id));
       }
-      updateChart(filtered);
+      // updateChart(filtered);  // Removed single-chart code
+      chartVR = updateSectionChart('VR', document.getElementById('filterVRTiming').value, chartVR, 'chartVR');
+chartDM = updateSectionChart('DM', document.getElementById('filterDMTiming').value, chartDM, 'chartDM');
+chartQR = updateSectionChart('QR', document.getElementById('filterQRTiming').value, chartQR, 'chartQR');
     }
 
-    function updateChart(filteredEntries) {
-      const labels = filteredEntries.map(e => e.data.date);
-      const dataVals = filteredEntries.map(e => {
-        const [obt, tot] = e.data.score.split('/').map(Number);
-        return tot > 0 ? (obt / tot) * 100 : 0;
-      });
-      const ctx = document.getElementById('scoreChart').getContext('2d');
-      if (!scoreChart) {
-        scoreChart = new Chart(ctx, {
-          type: 'line',
-          data: {
-            labels,
-            datasets: [{
-              label: '% Correct',
-              data: dataVals,
-              fill: false,
-              tension: 0.1,
-              pointRadius: 5,
-              pointHoverRadius: 7
-            }]
-          },
-          options: {
-            onClick: (evt, elements) => {
-              if (elements.length) {
-                const idx = elements[0].index;
-                alert('Score: ' + filteredEntries[idx].data.score);
-              }
-            },
-            scales: {
-              y: { beginAtZero: true, max: 100 }
-            }
-          }
-        });
-      } else {
-        scoreChart.data.labels = labels;
-        scoreChart.data.datasets[0].data = dataVals;
-        scoreChart.update();
-      }
-    }
- 
+    // updateChart function removed (single-chart code)
+    function updateSectionChart(section, timingFilterValue, chartVar, canvasId) {
+  const entries = allEntries
+    .filter(({ data }) => data.section === section)
+    .filter(({ data }) => timingFilterValue === 'All' || data.timing === timingFilterValue)
+    .sort((a, b) => {
+      const aDate = a.data.createdAt?.toDate?.() || new Date(0);
+      const bDate = b.data.createdAt?.toDate?.() || new Date(0);
+      return aDate - bDate;
+    });
+
+  const labels = entries.map(e => e.data.date);
+  const values = entries.map(e => {
+    const [obt, tot] = e.data.score.split('/').map(Number);
+    return tot > 0 ? (obt / tot) * 100 : 0;
+  });
+
+  const ctx = document.getElementById(canvasId).getContext('2d');
+  const cfg = {
+    type: 'line',
+    data: { labels, datasets: [{ 
+      label: '% Correct', data: values,
+      borderColor: '#7AEC98', backgroundColor: 'rgba(122,236,152,0.2)',
+      fill: true, tension: 0.1, pointRadius: 4
+    }]},
+    options: { scales: { y: { beginAtZero:true, max:100 } }, plugins: { legend: { display: false } } }
+  };
+
+  if (!chartVar) return new Chart(ctx, cfg);
+  chartVar.data.labels = labels;
+  chartVar.data.datasets[0].data = values;
+  chartVar.update();
+  return chartVar;
+}
     async function addScore(entry) {
       entry.userId = auth.currentUser.uid;
       entry.createdAt = serverTimestamp();
